--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Multiverse by HTML5 UP</title>
+		<title>Russ Hacker | Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,32 +18,33 @@
 			<div id="wrapper">
 
 				<!-- Header -->
+				<a href="#footer" ><!--had class="icon solid fa-info-circle"-->
 					<header id="header">
-						<h1><a href="index.html"><strong>Multiverse</strong> by HTML5 UP</a></h1>
+						<h1><strong>Russ Hacker</strong></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li>More</li>
 							</ul>
 						</nav>
 					</header>
+				</a>
 
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="" /></a>
-							<h2>Magna feugiat lorem</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-							<span>Lean More</span>
+							<a href="images/fulls/hal-gatewood-tZc3vjPCk-Q-unsplash.jpg" class="image"><img src="images/thumbs/hal-gatewood-tZc3vjPCk-Q-unsplash.jpg" alt="" /></a>
+							<h2>Responsive Design</h2>
+							<p>A site should always looks its best.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/pankaj-patel-Fi-GJaLRGKc-unsplash.jpg" class="image"><img src="images/thumbs/markus-spiske-1LLh8k2_YFk-unsplash.jpg" alt="" /></a>
+							<h2>Devlopment</h2>
+							<p>HTML, CSS, JS, LESS, SASS, PHP</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<a href="images/fulls/codewarf.png" class="image"><img src="images/thumbs/codewars.png" alt="" /></a>
+							<h2>Codewars</h2>
+							<p>Train your Kata.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
@@ -97,8 +98,8 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>Full Stack Web Developer In Training</h2>
+									<p>An experienced old school LAMP developer looking to update their knowledge, and expand their Full Stack skill sets to modern standards. I look forward to putting my experience, knowledge, and skillsets to work solving whatever problems you need help with. </p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
@@ -106,13 +107,13 @@
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://github.com/newbi462" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</section>
 								<p class="copyright">
-									&copy; Unttled. Design: <a href="http://html5up.net">HTML5 UP</a>.
+									&copy; Multiverse by: <a href="http://html5up.net">HTML5 UP</a>.
 								</p>
 							</div>
 							<div>
