Design full redone

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/hal-gatewood-tZc3vjPCk-Q-unsplash.jpg" class="image"><img src="images/thumbs/hal-gatewood-tZc3vjPCk-Q-unsplash.jpg" alt="" /></a>
+							<a href="images/fulls/rdesign-hold.png" class="image"><img src="images/thumbs/hal-gatewood-tZc3vjPCk-Q-unsplash.jpg" alt="" /></a>
 							<h2>Responsive Design</h2>
 							<p>A site should always looks its best.</p>
 						</article>
