--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 							<h2>Coss Platform</h2>
 							<p>Windows, Mac OS X, Linux, Android, Chrome OS</p>
 						</article>
-<!--						<article class="thumb">
-							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
 						<article class="thumb">
+							<a href="images/fulls/usplash3screen.jpg" class="image"><img src="images/thumbs/usplash3screen.jpg" alt="" /></a>
+							<h2>GitHub</h2>
+							<p>See my code on GitHub.</p>
+						</article>
+<!--						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
 							<h2>Mauris id tellus arcu</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
