--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 							<h2>GitHub</h2>
 							<p>See my code on GitHub.</p>
 						</article>
-<!--						<article class="thumb">
-							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
-						</article>
 						<article class="thumb">
+							<a href="images/fulls/bootstrap.jpg" class="image"><img src="images/thumbs/bootstrap-social.png" alt="" /></a>
+							<h2>Bootstrap</h2>
+							<p>Is a pouler turn key framework for responsive design on a budget.</p>
+						</article>
+<!--						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
 							<h2>Nunc vehicula id nulla</h2>
 							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
